fixed songs not showing up issue.

--- a/WebContent/songStyle.css
+++ b/WebContent/songStyle.css
@@ -95,7 +95,6 @@
 	display:inline-block;
 	float:right;
 	line-height:60px;
-	vertical-align:center;
 }
 
 .button .circle {
